--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/margin_base_size_60"
-                android:background="@color/colorPrimaryMediumLight"
-                android:clickable="true">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="@dimen/margin_base_size_60"
+    android:background="@color/colorPrimaryMediumLight"
+    android:clickable="true">
 
 
     <!-- TOP BUTTONS CONTAINER -->
@@ -14,7 +15,7 @@
     <RelativeLayout
         android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
+        android:layout_height="72dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/phone_background"
@@ -24,8 +25,10 @@
         <TextView
             style="@style/boldText"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:paddingBottom="16dp"
+            android:layout_alignParentBottom="true"
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
             android:text="@string/join_now_sign_in"
