--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_background"
+    tools:ignore="ContentDescription,MissingPrefix,RtlHardcoded,RtlSymmetry"
     tools:context="base.app.fragment.instance.WallFragment">
 
     <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
@@ -20,14 +21,15 @@
             android:clipToPadding="false"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
             <RelativeLayout
                 android:layout_width="match_parent"
+                android:paddingTop="80dp"
                 android:layout_height="match_parent">
 
                 <RelativeLayout
                     android:id="@+id/wall_top_image_container"
                     android:visibility="gone"
+                    android:layout_marginTop="-80dp"
                     tools:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -36,11 +38,8 @@
                         android:id="@+id/wall_top_image"
                         android:layout_width="match_parent"
                         android:layout_height="240dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
-                        tools:src="@drawable/image_wall_background"/>
+                        tools:src="@drawable/image_wall_background" />
 
                     <RelativeLayout
                         android:id="@+id/wall_top_info_container"
@@ -130,8 +129,8 @@
                             android:layout_centerHorizontal="true"
                             android:textColor="@color/white"/>
                     </RelativeLayout>
-                </RelativeLayout>
 
+                </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/login_holder"
@@ -215,7 +214,6 @@
 
                 </LinearLayout>
 
-
                 <com.wang.avi.AVLoadingIndicatorView
                     android:id="@+id/progress_bar"
                     android:layout_width="@dimen/prodgres_bar"
@@ -230,15 +228,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@id/login_holder"
-                    android:layout_marginTop="?wallRecyclerListPhoneTopMargin"
-                    />
+                    android:layout_marginTop="?wallRecyclerListPhoneTopMargin"/>
 
             </RelativeLayout>
         </android.support.v4.widget.NestedScrollView>
     </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
-
-
-
 
     <View
         android:id="@+id/shadow"
@@ -312,4 +306,5 @@
         app:backgroundTint="@color/black"
         android:src="@drawable/fab_plus"
         android:tint="@color/white"/>
+
 </RelativeLayout>
