--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -124,7 +124,7 @@
         tools:visibility="visible">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/comment_author_user_image"
+            android:id="@+id/captionAvatar"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_alignParentStart="true"
@@ -140,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/margin_10"
-            android:layout_toEndOf="@+id/comment_author_user_image"
+            android:layout_toEndOf="@+id/captionAvatar"
             android:ellipsize="end"
             android:lineSpacingMultiplier="0.826"
             android:maxLines="4"
