--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
@@ -148,7 +148,7 @@
             />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/comment_author_user_image"
+            android:id="@+id/captionAvatar"
             android:layout_width="@dimen/width_26"
             android:layout_height="@dimen/height_26"
             android:layout_toRightOf="@+id/strip_bottom"
@@ -164,7 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/margin_10"
-            android:layout_toEndOf="@+id/comment_author_user_image"
+            android:layout_toEndOf="@+id/captionAvatar"
             android:ellipsize="end"
             android:lineSpacingMultiplier="0.826"
             android:maxLines="4"
