--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_background"
-    tools:ignore="ContentDescription,MissingPrefix,RtlHardcoded,RtlSymmetry"
-    tools:context=".ui.fragment.instance.WallFragment">
+    tools:context=".ui.fragment.instance.WallFragment"
+    tools:ignore="ContentDescription,MissingPrefix,RtlHardcoded,RtlSymmetry">
 
     <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
         android:id="@+id/swipe_refresh_layout"
@@ -23,16 +23,16 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:paddingTop="80dp"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:paddingTop="72dp">
 
                 <RelativeLayout
                     android:id="@+id/wall_top_image_container"
-                    android:visibility="gone"
-                    android:layout_marginTop="-80dp"
-                    tools:visibility="visible"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="-80dp"
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                     <ImageView
                         android:id="@+id/wall_top_image"
@@ -67,14 +67,14 @@
                                 android:paddingEnd="@dimen/padding_2"
                                 android:textColor="@color/white"
                                 android:textSize="32sp"
-                                android:textStyle="bold"/>
+                                android:textStyle="bold" />
 
                             <ImageView
                                 android:id="@+id/wall_team_left_image"
                                 android:layout_width="@dimen/width_70"
                                 android:layout_height="@dimen/height_70"
                                 android:layout_centerVertical="true"
-                                android:layout_toEndOf="@id/wall_team_left_name"/>
+                                android:layout_toEndOf="@id/wall_team_left_name" />
 
                             <TextView
                                 android:id="@+id/wall_team_vs"
@@ -85,14 +85,14 @@
                                 android:padding="@dimen/padding_8"
                                 android:text="@string/vs"
                                 android:textColor="@color/white"
-                                android:textSize="20sp"/>
+                                android:textSize="20sp" />
 
                             <ImageView
                                 android:id="@+id/wall_team_right_image"
                                 android:layout_width="@dimen/width_70"
                                 android:layout_height="@dimen/height_70"
                                 android:layout_centerVertical="true"
-                                android:layout_toEndOf="@id/wall_team_vs"/>
+                                android:layout_toEndOf="@id/wall_team_vs" />
 
                             <TextView
                                 android:id="@+id/wall_team_right_name"
@@ -108,7 +108,7 @@
                                 android:paddingStart="@dimen/padding_2"
                                 android:textColor="@color/white"
                                 android:textSize="32sp"
-                                android:textStyle="bold"/>
+                                android:textStyle="bold" />
                         </RelativeLayout>
 
                         <TextView
@@ -119,7 +119,7 @@
                             android:layout_below="@id/wall_top_info"
                             android:layout_centerHorizontal="true"
                             android:text="@string/next_match"
-                            android:textColor="?nextMatchTextPhoneColor"/>
+                            android:textColor="?nextMatchTextPhoneColor" />
 
                         <TextView
                             android:id="@+id/wall_team_time"
@@ -127,7 +127,7 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@id/wall_team_next_match"
                             android:layout_centerHorizontal="true"
-                            android:textColor="@color/white"/>
+                            android:textColor="@color/white" />
                     </RelativeLayout>
 
                 </RelativeLayout>
@@ -135,81 +135,74 @@
                 <LinearLayout
                     android:id="@+id/login_holder"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/wall_top_image_container"
+                    android:paddingBottom="8dp"
+                    android:layout_marginBottom="8dp"
                     android:animateLayoutChanges="true"
-                    android:paddingTop="@dimen/margin_16"
+                    android:background="@color/colorPrimary"
                     android:orientation="vertical"
-                    android:background="@color/login_background"
-                    android:layout_marginBottom="@dimen/height_30"
+                    android:paddingTop="@dimen/margin_16"
                     android:visibility="gone"
-                    android:layout_height="wrap_content">
+                    tools:visibility="visible">
 
                     <TextView
                         android:id="@+id/textView2"
+                        style="@style/fontTitilliumWebLight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        style="@style/fontTitilliumWebLight"
-                        android:textSize="@dimen/font_size_19"
                         android:padding="@dimen/padding_8"
-                        android:textColor="@color/colorPrimary"
                         android:text="@string/to_access_full_features"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="24sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="@dimen/margin_16"
+                        android:gravity="center"
                         android:layout_marginBottom="@dimen/margin_20"
-                        android:orientation="horizontal" >
-
-                        <View
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.131" />
+                        android:layout_marginTop="4dp"
+                        android:orientation="horizontal">
 
                         <Button
                             android:id="@+id/join_now_button"
-                            android:layout_width="0dp"
+                            style="?android:attr/borderlessButtonStyle"
+                            android:layout_width="150dp"
                             android:layout_height="@dimen/standard_button_height"
-                            android:layout_weight="0.324"
                             android:background="@drawable/gym_bag_button_background"
                             android:text="@string/join_now"
                             android:textAlignment="center"
                             android:textAllCaps="false"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/font_size_19"
-                            style="?android:attr/borderlessButtonStyle"/>
+                            android:textSize="@dimen/font_size_19" />
 
                         <TextView
+                            style="@style/fontTitilliumWebLight"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_weight="0.082"
-                            style="@style/fontTitilliumWebLight"
-                            android:textSize="@dimen/font_size_19"
-                            android:padding="@dimen/padding_8"
-                            android:textColor="@color/colorPrimary"
+                            android:gravity="center"
+                            android:paddingLeft="16dp"
+                            android:paddingRight="16dp"
                             android:text="@string/or"
-                            android:textAlignment="center"/>
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/font_size_19" />
+
                         <Button
                             android:id="@+id/login_button"
-                            android:layout_width="0dp"
+                            style="?android:attr/borderlessButtonStyle"
+                            android:layout_width="150dp"
                             android:layout_height="@dimen/standard_button_height"
                             android:layout_gravity="center"
-                            android:layout_weight="0.324"
                             android:background="@drawable/light_button_edit_profile_image"
                             android:gravity="center"
                             android:text="@string/sign_in"
                             android:textAlignment="center"
                             android:textAllCaps="false"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/font_size_19"
-                            style="?android:attr/borderlessButtonStyle"/>
+                            android:textSize="@dimen/font_size_19" />
 
-                        <View
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.131"  />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -226,9 +219,11 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/fragment_wall_recycler_view"
                     android:layout_width="match_parent"
+                    android:paddingTop="8dp"
+                    android:clipToPadding="false"
                     android:layout_height="match_parent"
                     android:layout_below="@id/login_holder"
-                    android:layout_marginTop="?wallRecyclerListPhoneTopMargin"/>
+                    android:layout_marginTop="?wallRecyclerListPhoneTopMargin" />
 
             </RelativeLayout>
         </android.support.v4.widget.NestedScrollView>
@@ -245,13 +240,13 @@
         android:id="@+id/fragment_wall_bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
+        android:layout_above="@+id/shadow_1"
+        android:layout_alignParentStart="true"
+        android:animateLayoutChanges="true"
         android:background="?phoneWallMenuBackground"
         android:clickable="true"
-        android:animateLayoutChanges="true"
-        android:visibility="gone"
         android:gravity="center"
-        android:layout_above="@+id/shadow_1"
-        android:layout_alignParentStart="true">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/fragment_wall_new_post"
@@ -292,19 +287,19 @@
         android:layout_width="fill_parent"
         android:layout_height="@dimen/height_1dp"
         android:layout_alignParentBottom="true"
-        android:visibility="gone"
-        android:background="@drawable/top_gradient_drawable" />
+        android:background="@drawable/top_gradient_drawable"
+        android:visibility="gone" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_gravity="bottom"
         android:layout_margin="@dimen/margin_16"
-        app:backgroundTint="@color/black"
         android:src="@drawable/fab_plus"
-        android:tint="@color/white"/>
+        android:tint="@color/white"
+        app:backgroundTint="@color/black" />
 
 </RelativeLayout>
