--- a/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?white_semitransparent"
-    tools:context=".ui.fragment.instance.ChatFragment">
+    tools:context=".ui.fragment.other.ChatFragment">
 
     <!-- Background image -->
     <ImageView
