--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -6,7 +6,7 @@
     android:background="?white_semitransparent"
     android:paddingTop="72dp"
     tools:paddingTop="0dp"
-    tools:context=".ui.fragment.instance.ChatFragment">
+    tools:context=".ui.fragment.other.ChatFragment">
 
     <!-- Background image -->
     <ImageView
