--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryMediumLight"
-    tools:context=".ui.fragment.instance.ClubRadioFragment">
+    tools:context=".ui.fragment.stream.ClubRadioFragment">
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress_bar"
