--- a/SportsSideKick/app/src/main/res/layout/fragment_club_tv.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_tv.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryMediumLight"
-    tools:context=".ui.fragment.instance.ClubTVFragment">
+    tools:context=".ui.fragment.stream.ClubTVFragment">
 
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/video_player_dummy_container"
