--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
     android:background="@color/login_background"
                 android:layout_height="match_parent"
-                tools:context=".ui.fragment.instance.WallFragment">
+                tools:context=".ui.fragment.content.WallFragment">
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress_bar"
