--- a/SportsSideKick/app/src/main/res/layout/fragment_statistics.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_statistics.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:paddingTop="80dp"
-    tools:context=".ui.fragment.instance.FantasyFragment"
+    tools:context=".ui.fragment.other.FantasyFragment"
     tools:paddingTop="0dp">
 
     <WebView
