--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryMediumLight"
-    tools:context=".ui.fragment.instance.VideoChatFragment">
+    tools:context=".ui.fragment.stream.VideoChatFragment">
 
     <RelativeLayout
         android:id="@+id/bottom"
