--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -19,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_menu_recycler_view"
-            android:background="@color/colorPrimaryMediumLight"/>
+            android:background="@color/colorPrimaryMediumLight" />
 
         <RelativeLayout
             android:id="@+id/left_top_bar_container"
@@ -34,7 +33,7 @@
                 android:background="@drawable/phone_background"
                 android:paddingTop="24dp"
                 android:tileMode="repeat"
-                tools:paddingTop="0dp"/>
+                tools:paddingTop="0dp" />
 
             <ImageView
                 android:id="@+id/logo"
@@ -45,7 +44,7 @@
                 android:padding="@dimen/padding_4"
                 android:scaleType="fitCenter"
                 tools:layout_marginTop="0dp"
-                tools:src="?logoIcon"/>
+                tools:src="?logoIcon" />
 
             <TextView
                 android:id="@+id/caption"
@@ -59,7 +58,7 @@
                 android:textAllCaps="true"
                 android:textColor="?phoneLoungeTeamCaptionColor"
                 android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/scrolling_news_title"
@@ -74,12 +73,11 @@
                 android:paddingBottom="@dimen/half_margin"
                 android:paddingRight="8dp"
                 android:textColor="?phoneLoungeTickerColor"
-                android:textSize="@dimen/font_size_10"/>
+                android:textSize="@dimen/font_size_10" />
 
             <ImageView
                 android:id="@+id/notification_open"
                 android:layout_width="@dimen/top_bar_logo_tema_size"
-                android:visibility="gone"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="24dp"
@@ -89,7 +87,8 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/notif_icon"
                 android:tint="?phoneLoungeIconsColor"
-                tools:layout_marginTop="0dp"/>
+                android:visibility="gone"
+                tools:layout_marginTop="0dp" />
 
             <ImageView
                 android:id="@+id/friends_open"
@@ -103,7 +102,7 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/icon_friends"
                 android:tint="?phoneLoungeIconsColor"
-                tools:layout_marginTop="0dp"/>
+                tools:layout_marginTop="0dp" />
 
             <TextView
                 android:id="@+id/notification_number"
@@ -113,14 +112,14 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_size_12"
                 android:textStyle="bold"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <RelativeLayout
                 android:id="@+id/left_notification_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"/>
+                android:layout_alignParentTop="true" />
 
         </RelativeLayout>
 
@@ -130,23 +129,23 @@
             android:layout_height="@dimen/height_2"
             android:layout_above="@+id/bottom_menu_recycler_view"
             android:alpha="0.6"
-            android:background="@drawable/top_gradient_drawable"/>
+            android:background="@drawable/top_gradient_drawable" />
 
         <base.app.util.ui.NoScrollRecycler
             android:id="@+id/bottom_menu_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentBottom="true"
-            android:background="@color/white"/>
+            android:background="@color/white" />
 
         <RelativeLayout
             android:id="@+id/fragment_popup_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout_height="0dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent"/>
+            android:background="@color/transparent"
+            tools:layout_height="0dp" />
 
         <RelativeLayout
             android:id="@+id/fragment_left_popup_holder"
@@ -155,50 +154,63 @@
             android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent"/>
+            android:background="@color/transparent" />
 
         <RelativeLayout
             android:id="@+id/blurred_background"
             android:layout_width="match_parent"
-            tools:layout_height="0dp"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent"/>
+            android:background="@color/transparent"
+            tools:layout_height="0dp" />
 
         <RelativeLayout
             android:id="@+id/fragment_dialog"
             android:layout_width="match_parent"
-            tools:layout_height="0dp"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent"/>
+            android:background="@color/transparent"
+            tools:layout_height="0dp" />
 
-        <base.app.util.ui.NextMatchView
+        <FrameLayout
             android:id="@+id/splash"
             android:layout_width="match_parent"
-            tools:layout_height="0dp"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/splashBackgroundImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:background="@color/colorPrimarySlightlyLight"
+                android:src="@drawable/video_chat_background"/>
+
+            <base.app.util.ui.NextMatchView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </FrameLayout>
 
         <LinearLayout
             android:id="@+id/fragment_radio_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
             android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_below="@+id/left_top_bar_container"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:id="@+id/radio_holder"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <RelativeLayout
                 android:id="@+id/radio_list_holder"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
         </LinearLayout>
 
         <LinearLayout
@@ -212,12 +224,13 @@
             <RelativeLayout
                 android:id="@+id/youtube_holder"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <RelativeLayout
                 android:id="@+id/play_list_holder"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:baselineAligned="false" />
         </LinearLayout>
 
     </android.support.percent.PercentRelativeLayout>
@@ -240,12 +253,12 @@
             <android.support.percent.PercentRelativeLayout
                 android:id="@+id/profile"
                 android:layout_width="match_parent"
-                android:paddingTop="24dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:background="@color/white"
                 android:onClick="onProfileClicked"
+                android:paddingTop="24dp"
                 app:layout_heightPercent="17.5%">
 
                 <TextView
@@ -260,7 +273,7 @@
                     android:text="@string/go_to_profile"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryVeryLight"
-                    android:textSize="@dimen/font_size_8"/>
+                    android:textSize="@dimen/font_size_8" />
 
                 <RelativeLayout
                     android:id="@+id/profile_info_holder"
@@ -286,7 +299,7 @@
                             android:adjustViewBounds="true"
                             android:contentDescription="@string/image"
                             android:padding="@dimen/padding_2"
-                            android:src="?profileImageIcon"/>
+                            android:src="?profileImageIcon" />
 
                         <RelativeLayout
                             android:id="@+id/holder_progress_bar"
@@ -334,7 +347,7 @@
                                 android:gravity="center"
                                 android:textColor="@color/white"
                                 android:textSize="@dimen/font_size_10"
-                                android:textStyle="bold"/>
+                                android:textStyle="bold" />
                         </RelativeLayout>
                     </RelativeLayout>
                 </RelativeLayout>
@@ -361,7 +374,7 @@
                             android:adjustViewBounds="true"
                             android:contentDescription="@null"
                             android:src="?userCoinIcon"
-                            app:layout_heightPercent="25%"/>
+                            app:layout_heightPercent="25%" />
 
                         <TextView
                             android:id="@+id/you_have"
@@ -375,7 +388,7 @@
                             android:text="@string/coins_caption"
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryVeryDark"
-                            android:textSize="@dimen/font_size_8"/>
+                            android:textSize="@dimen/font_size_8" />
 
                         <TextView
                             android:id="@+id/your_coins_value"
@@ -388,7 +401,7 @@
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimarySemiLight"
                             android:textSize="@dimen/font_size_12"
-                            android:textStyle="bold"/>
+                            android:textStyle="bold" />
                     </android.support.percent.PercentRelativeLayout>
                 </RelativeLayout>
             </android.support.percent.PercentRelativeLayout>
@@ -404,7 +417,7 @@
                 android:choiceMode="singleChoice"
                 android:dividerHeight="0dp"
                 android:footerDividersEnabled="false"
-                android:overScrollFooter="@android:color/transparent"/>
+                android:overScrollFooter="@android:color/transparent" />
         </android.support.percent.PercentRelativeLayout>
     </android.support.percent.PercentRelativeLayout>
 
