--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -176,6 +176,7 @@
 
         <FrameLayout
             android:id="@+id/splash"
+            android:background="@color/colorPrimarySlightlyLight"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -183,8 +184,8 @@
                 android:id="@+id/splashBackgroundImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:alpha="0.4"
                 android:scaleType="centerCrop"
-                android:background="@color/colorPrimarySlightlyLight"
                 android:src="@drawable/video_chat_background"/>
 
             <base.app.util.ui.NextMatchView
