proper expanding of shared comment field

--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -498,12 +498,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
+                android:paddingTop="15dp"
                 android:gravity="top"
-                android:singleLine="true"
-                android:paddingBottom="-8dp"
-                android:layout_marginTop="15dp"
+                android:paddingBottom="15dp"
                 android:paddingRight="8dp"
-                android:ellipsize="end"
+                android:singleLine="true"
                 fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                 android:layout_weight="1"
                 android:background="@null"
