show shared message avatar

--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -454,12 +454,21 @@
                 android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                 android:tint="#8501a352" />
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/sharedMessageAvatar"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginBottom="@dimen/margin_10"
+                android:layout_marginTop="14dp"
+                tools:src="?profileImageIcon" />
+
             <EditText
                 android:id="@+id/sharedMessageField"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
-                android:paddingTop="15dp"
+                android:paddingTop="14dp"
                 android:gravity="top"
                 android:paddingBottom="15dp"
                 android:paddingRight="8dp"
