--- a/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
@@ -119,7 +119,7 @@
                 android:scaleType="fitXY"
                 android:visibility="gone" />
             <ProgressBar
-                android:id="@+id/progress_bar"
+                android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/chat_image_view"
