--- a/SportsSideKick/app/src/main/res/layout-large/item_video_chat_slot.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/item_video_chat_slot.xml
@@ -6,7 +6,7 @@
     app:layout_constraintBottom_toTopOf="@+id/preview_video_view">
 
     <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/progress_bar"
+        android:id="@+id/progressBar"
         android:layout_width="@dimen/progress_bar_width"
         android:layout_height="@dimen/progress_bar_height"
         android:layout_centerInParent="true"
