--- a/SportsSideKick/app/src/main/res/layout-large/popup_add_friend.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_add_friend.xml
@@ -119,7 +119,7 @@
         android:visibility="gone" />
 
     <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/progress_bar"
+        android:id="@+id/progressBar"
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:visibility="gone"      android:layout_below="@id/enter_friend_name"
