--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
@@ -50,7 +50,7 @@
         android:background="?colorAccent" />
 
     <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/progress_bar"
+        android:id="@+id/progressBar"
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
