--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -56,7 +56,7 @@
         android:visibility="gone" />
 
     <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
@@ -115,7 +115,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:baselineAligned="false">
 
                         <LinearLayout
                             android:id="@+id/likes_container"
@@ -469,6 +470,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
                 android:paddingTop="14dp"
+                android:inputType="textCapSentences"
                 android:gravity="top"
                 android:paddingBottom="15dp"
                 android:paddingRight="8dp"
