--- a/SportsSideKick/app/src/main/res/layout/fragment_statistics.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_statistics.xml
@@ -28,7 +28,7 @@
         android:layout_alignParentTop="true"/>
 
     <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/progress_bar"
+        android:id="@+id/progressBar"
         android:layout_width="@dimen/prodgres_bar"
         app:indicatorColor="@color/black"
         android:layout_height="@dimen/prodgres_bar"
