--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -50,7 +50,7 @@
             android:src="@drawable/play_button_icon" />
 
         <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/progress_bar"
+            android:id="@+id/progressBar"
             android:layout_width="@dimen/progress_bar_width"
             android:layout_height="@dimen/progress_bar_height"
             android:layout_margin="@dimen/margin_10"
