--- a/SportsSideKick/app/src/main/res/layout/popup_edit_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_edit_chat.xml
@@ -156,7 +156,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/edit_caption_label"
         android:layout_marginBottom="@dimen/margin_20"
-        android:layout_alignStart="@+id/swipe_refresh_layout">
+        android:layout_alignStart="@+id/swipeRefreshLayout">
 
         <View
             android:id="@+id/search_friends_container_mid_line"
@@ -243,7 +243,7 @@
     </RelativeLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/search_friends_container"
