--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/margin_base_size_60"
-    android:background="@color/colorPrimaryMediumLight"
-    android:clickable="true">
+    android:layout_marginTop="24dp"
+    android:background="@color/colorPrimaryMediumLight">
 
     <View
         android:id="@+id/top_split_line"
@@ -71,18 +70,17 @@
         </RelativeLayout>
 
         <RelativeLayout
-
             android:id="@+id/content_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
             android:animateLayoutChanges="true"
-            android:clickable="true"
             android:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
                 android:layout_marginEnd="@dimen/margin_30"
                 android:layout_marginStart="@dimen/margin_30"
                 android:orientation="vertical">
@@ -91,7 +89,7 @@
                     android:layout_width="@dimen/height_70"
                     android:layout_height="@dimen/height_70"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="@dimen/margin_20"
+                    android:layout_marginBottom="8dp"
                     android:src="@drawable/club_logo" />
 
                 <TextView
@@ -99,10 +97,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="@dimen/margin_20"
+                    android:layout_marginTop="-8dp"
+                    android:layout_marginBottom="24dp"
                     android:text="@string/login_slider_text_1_phone"
                     android:textColor="?popupsCaptionColor"
-                    android:textSize="@dimen/font_size_25" />
+                    android:textSize="18sp" />
 
                 <Button
                     android:id="@+id/facebook_button"
@@ -269,6 +268,7 @@
         android:layout_alignParentTop="true"
         android:background="@drawable/phone_background"
         android:orientation="horizontal">
+
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/close_dialog_button"
             android:layout_width="@dimen/standard_button_height"
@@ -279,6 +279,7 @@
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
             android:tint="@color/colorPrimaryVeryLight"
             android:visibility="gone" />
+
         <TextView
             style="@style/boldText"
             android:layout_width="wrap_content"
@@ -289,12 +290,10 @@
             android:text="@string/join_now_sign_in"
             android:textAllCaps="true"
             android:textColor="?popupsCaptionColor"
-            android:textSize="@dimen/font_size_16"
-            />
+            android:textSize="@dimen/font_size_16" />
 
 
     </RelativeLayout>
-
 
     <TextView
         android:id="@+id/forgot_button"
@@ -308,4 +307,5 @@
         android:layout_marginTop="@dimen/margin_20"
         android:text="@string/forgot_your_password"
         android:textColor="?popupsCaptionColor" />
+
 </RelativeLayout>
