fix creating new posts

--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -146,6 +146,7 @@
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textCapSentences"
         android:layout_below="@id/author_user_image"
         android:layout_marginEnd="@dimen/margin_5"
         android:layout_marginStart="@dimen/margin_15"
@@ -162,6 +163,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/caption"
+        android:inputType="textCapSentences"
         android:layout_marginBottom="@dimen/margin_5"
         android:layout_marginEnd="@dimen/margin_15"
         android:layout_marginStart="@dimen/margin_15"
