show likes and comments count for posts

--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -432,6 +432,7 @@
         android:layout_height="wrap_content"
         android:background="#f7ffffff"
         android:orientation="vertical"
+        android:elevation="6dp"
         android:visibility="gone"
         tools:visibility="visible">
 
