--- a/SportsSideKick/app/src/main/res/layout-large/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/next_match_view.xml
@@ -61,7 +61,7 @@
             app:autoSizeMinTextSize="20sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform"
-            app:layout_constraintBottom_toTopOf="@+id/next_match_container"
+            app:layout_constraintBottom_toTopOf="@+id/nextMatchContainer"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/label" />
@@ -83,7 +83,7 @@
             app:autoSizeMinTextSize="20sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform"
-            app:layout_constraintBottom_toTopOf="@+id/next_match_container"
+            app:layout_constraintBottom_toTopOf="@+id/nextMatchContainer"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             tools:layout_editor_absoluteX="0dp" />
@@ -106,13 +106,13 @@
             app:autoSizeMinTextSize="20sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform"
-            app:layout_constraintBottom_toTopOf="@+id/next_match_container"
+            app:layout_constraintBottom_toTopOf="@+id/nextMatchContainer"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/label"
             app:layout_constraintRight_toRightOf="parent" />
 
         <RelativeLayout
-            android:id="@+id/next_match_container"
+            android:id="@+id/nextMatchContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/label"
@@ -148,13 +148,13 @@
                 android:layout_marginStart="40dp">
 
                 <TextView
-                    android:id="@+id/left_name"
+                    android:id="@+id/nameOfFirstTeam"
                     fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minHeight="@dimen/height_30"
                     android:layout_centerVertical="true"
-                    android:layout_toStartOf="@+id/left_image"
+                    android:layout_toStartOf="@+id/logoOfFirstTeam"
                     android:maxLength="6"
                     android:maxLines="1"
                     android:paddingEnd="@dimen/padding_2"
@@ -166,7 +166,7 @@
                     />
 
                 <ImageView
-                    android:id="@+id/left_image"
+                    android:id="@+id/logoOfFirstTeam"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
                     android:layout_centerVertical="true"
@@ -186,7 +186,7 @@
                     android:textSize="@dimen/font_size_20" />
 
                 <ImageView
-                    android:id="@+id/right_image"
+                    android:id="@+id/logoOfSecondTeam"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
                     android:src="@drawable/logo_ssk"
@@ -194,13 +194,13 @@
                     android:layout_toEndOf="@+id/vs" />
 
                 <TextView
-                    android:id="@+id/right_name"
+                    android:id="@+id/nameOfSecondTeam"
                     fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minHeight="@dimen/height_30"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/right_image"
+                    android:layout_toEndOf="@+id/logoOfSecondTeam"
                     android:background="@color/black"
                     android:paddingStart="@dimen/padding_2"
                     android:maxLines="1"
@@ -246,7 +246,7 @@
             android:id="@+id/fc_logo"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_below="@+id/next_match_container"
+            android:layout_below="@+id/nextMatchContainer"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:src="@drawable/logo_fq"
