--- a/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
@@ -57,14 +57,14 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="@dimen/margin_10"
                 android:layout_toEndOf="@+id/logo"
-                android:layout_toStartOf="@+id/next_match_container"
+                android:layout_toStartOf="@+id/nextMatchContainer"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:paddingBottom="@dimen/half_margin"
                 android:textColor="@color/colorAccentSemiDark" />
 
         <RelativeLayout
-            android:id="@+id/next_match_container"
+            android:id="@+id/nextMatchContainer"
             android:layout_width="wrap_content"
             android:layout_alignParentEnd="true"
             android:visibility="gone"
